Attempt to fix star for dark mode

--- a/application/static/index.css
+++ b/application/static/index.css
@@ -10,10 +10,6 @@ div #content-block-div {
     padding-bottom: 10px;
 }
 
-table {
-    border: 1px solid black;
-}
-
 .container {
   width: 80%;
   height: 200px;
@@ -25,11 +21,19 @@ table {
   width: 25%;
   height: 200px;
   float: left;
+  margin-right: 50px;
+  display: inline-block;
 }
 
 .right-product-div {
-  margin-left: 25%;
   height: 200px;
+  display: inline-block;
+}
+
+#price-chart-div {
+  display: inline-block;
+  width: 100%;
+  height: 300px;
 }
 
 #login_column {
@@ -42,6 +46,10 @@ table {
 }
 
 .favorite-star {
-    width: 32px;
-    height: 32px;
+    width: 48px;
+    height: 48px;
+}
+
+td {
+  padding: 0 5px;
 }
